Fix zh-CN translations to support hotkeys.
The hotkey support on zh-CN-localed system was broken due to mistakes
in previous zh-CN translation. This commit would fix this problem.

--- a/UI/data/locale/zh-CN.ini
+++ b/UI/data/locale/zh-CN.ini
@@ -12,8 +12,8 @@ Disable="禁用"
 Yes="是"
 No="否"
 Add="添加"
-Remove="移除"
-Rename="重命名"
+Remove="移除(&E)"
+Rename="重命名(&R)"
 Interact="交互"
 Filters="滤镜"
 Properties="属性"
@@ -36,8 +36,8 @@ Revert="还原"
 Show="显示"
 Hide="隐藏"
 Untitled="未命名"
-New="新建"
-Duplicate="复制"
+New="新建(&N)"
+Duplicate="复制(&D)"
 Enable="启用"
 DisableOSXVSync="禁用 OSX V-Sync"
 ResetOSXVSyncOnExit="退出时重置 OSX V-Sync"
@@ -264,39 +264,39 @@ Basic.Main.StopStreaming="停止串流"
 Basic.Main.StoppingStreaming="停止推流..."
 Basic.Main.ForceStopStreaming="停止流 (放弃延迟)"
 
-Basic.MainMenu.File="& 文件"
-Basic.MainMenu.File.Export="& 导出"
-Basic.MainMenu.File.Import="& 导入"
-Basic.MainMenu.File.ShowRecordings="显示 & 录像"
-Basic.MainMenu.File.Remux="转&封装 录像"
-Basic.MainMenu.File.Settings="& 设置"
-Basic.MainMenu.File.ShowSettingsFolder="显示设置文件夹"
-Basic.MainMenu.File.ShowProfileFolder="显示档案文件夹"
+Basic.MainMenu.File="文件(&F)"
+Basic.MainMenu.File.Export="导出(&E)"
+Basic.MainMenu.File.Import="导入(&I)"
+Basic.MainMenu.File.ShowRecordings="显示录像(&R)"
+Basic.MainMenu.File.Remux="转封装录像(&M)"
+Basic.MainMenu.File.Settings="设置(&S)"
+Basic.MainMenu.File.ShowSettingsFolder="显示设置文件夹(&F)"
+Basic.MainMenu.File.ShowProfileFolder="显示档案文件夹(&P)"
 Basic.MainMenu.AlwaysOnTop="总是在最前面(&A)"
 Basic.MainMenu.File.Exit="退出(&X)"
 
-Basic.MainMenu.Edit="& 编辑"
+Basic.MainMenu.Edit="编辑(&E)"
 Basic.MainMenu.Edit.Undo="& 撤消"
 Basic.MainMenu.Edit.Redo="& 重做"
 Basic.MainMenu.Edit.UndoAction="& 撤消 $1"
 Basic.MainMenu.Edit.RedoAction="& 重做 $1"
-Basic.MainMenu.Edit.Transform="& 变换"
-Basic.MainMenu.Edit.Transform.EditTransform="& 编辑变换"
-Basic.MainMenu.Edit.Transform.ResetTransform="& 重置变换"
-Basic.MainMenu.Edit.Transform.Rotate90CW="旋转 90 度 CW"
-Basic.MainMenu.Edit.Transform.Rotate90CCW="旋转 90 度 CCW"
-Basic.MainMenu.Edit.Transform.Rotate180="旋转 180 度"
-Basic.MainMenu.Edit.Transform.FlipHorizontal="水平翻转"
-Basic.MainMenu.Edit.Transform.FlipVertical="垂直翻转"
-Basic.MainMenu.Edit.Transform.FitToScreen="& 适配屏幕"
-Basic.MainMenu.Edit.Transform.StretchToScreen="& 拉伸到屏幕"
-Basic.MainMenu.Edit.Transform.CenterToScreen="& 屏幕居中"
-Basic.MainMenu.Edit.Order="& 顺序"
-Basic.MainMenu.Edit.Order.MoveUp="上移"
-Basic.MainMenu.Edit.Order.MoveDown="下移"
-Basic.MainMenu.Edit.Order.MoveToTop="移至顶部"
-Basic.MainMenu.Edit.Order.MoveToBottom="移至底部"
-Basic.MainMenu.Edit.AdvAudio="&高级音频属性"
+Basic.MainMenu.Edit.Transform="变换(&T)"
+Basic.MainMenu.Edit.Transform.EditTransform="编辑变换…(&E)"
+Basic.MainMenu.Edit.Transform.ResetTransform="重置变换…(&R)"
+Basic.MainMenu.Edit.Transform.Rotate90CW="顺时针旋转 90 度(&9)"
+Basic.MainMenu.Edit.Transform.Rotate90CCW="逆时针旋转 90 度(&D)"
+Basic.MainMenu.Edit.Transform.Rotate180="旋转 180 度(&1)"
+Basic.MainMenu.Edit.Transform.FlipHorizontal="水平翻转(&H)"
+Basic.MainMenu.Edit.Transform.FlipVertical="垂直翻转(&V)"
+Basic.MainMenu.Edit.Transform.FitToScreen="适配屏幕(&F)"
+Basic.MainMenu.Edit.Transform.StretchToScreen="拉伸到屏幕(&S)"
+Basic.MainMenu.Edit.Transform.CenterToScreen="屏幕居中(&C)"
+Basic.MainMenu.Edit.Order="顺序(&O)"
+Basic.MainMenu.Edit.Order.MoveUp="上移(&U)"
+Basic.MainMenu.Edit.Order.MoveDown="下移(&D)"
+Basic.MainMenu.Edit.Order.MoveToTop="移至顶部(&T)"
+Basic.MainMenu.Edit.Order.MoveToBottom="移至底部(&D)"
+Basic.MainMenu.Edit.AdvAudio="高级音频属性(&A)"
 
 Basic.MainMenu.View="查看(&V)"
 Basic.MainMenu.View.Toolbars="工具栏(&T)"
@@ -304,17 +304,17 @@ Basic.MainMenu.View.Toolbars.Listboxes="列表框(&L)"
 Basic.MainMenu.View.SceneTransitions="场景过渡(&C)"
 Basic.MainMenu.View.StatusBar="状态栏(&S)"
 
-Basic.MainMenu.SceneCollection="&场景集合"
-Basic.MainMenu.Profile="&档案"
+Basic.MainMenu.SceneCollection="场景集合(&S)"
+Basic.MainMenu.Profile="档案(&P)"
 
-Basic.MainMenu.Help="& 帮助"
-Basic.MainMenu.Help.Website="访问 &网站"
-Basic.MainMenu.Help.Logs="& 日志文件"
-Basic.MainMenu.Help.Logs.ShowLogs="& 显示日志文件"
-Basic.MainMenu.Help.Logs.UploadCurrentLog="& 上传当前日志文件"
-Basic.MainMenu.Help.Logs.UploadLastLog="& 上传最后一个日志文件"
-Basic.MainMenu.Help.Logs.ViewCurrentLog="& 查看当前日志"
-Basic.MainMenu.Help.CheckForUpdates="检查升级"
+Basic.MainMenu.Help="帮助(&H)"
+Basic.MainMenu.Help.Website="访问网站(&W)"
+Basic.MainMenu.Help.Logs="日志文件(&L)"
+Basic.MainMenu.Help.Logs.ShowLogs="显示日志文件(&S)"
+Basic.MainMenu.Help.Logs.UploadCurrentLog="上传当前日志文件(&C)"
+Basic.MainMenu.Help.Logs.UploadLastLog="上传最后一个日志文件(&L)"
+Basic.MainMenu.Help.Logs.ViewCurrentLog="查看当前日志(&V)"
+Basic.MainMenu.Help.CheckForUpdates="检查升级(&C)"
 
 Basic.Settings.ProgramRestart="要使这些设置生效，必须重新启动该程序。"
 Basic.Settings.ConfirmTitle="确认更改"
@@ -470,10 +470,10 @@ Basic.Settings.Advanced.StreamDelay.MemoryUsage="估计的内存使用率: %1 MB
 
 Basic.AdvAudio="高级音频属性"
 Basic.AdvAudio.Name="名称"
-Basic.AdvAudio.Volume="卷 (%)"
+Basic.AdvAudio.Volume="音量（%）"
 Basic.AdvAudio.Mono="下降混合为单声道"
 Basic.AdvAudio.Panning="平移"
-Basic.AdvAudio.SyncOffset="同步偏移 (毫秒)"
+Basic.AdvAudio.SyncOffset="同步偏移（毫秒）"
 Basic.AdvAudio.AudioTracks="轨道"
 
 Basic.Settings.Hotkeys="热键"
