obs-text: Add bk color/opacity properties

--- a/plugins/obs-text/data/locale/en-US.ini
+++ b/plugins/obs-text/data/locale/en-US.ini
@@ -7,6 +7,8 @@ Filter.TextFiles="Text Files"
 Filter.AllFiles="All Files"
 Color="Color"
 Opacity="Opacity"
+BkColor="Background Color"
+BkOpacity="Background Opacity"
 Alignment="Alignment"
 Alignment.Left="Left"
 Alignment.Center="Center"
