obs-text: Add gradient feature

--- a/plugins/obs-text/data/locale/en-US.ini
+++ b/plugins/obs-text/data/locale/en-US.ini
@@ -7,6 +7,9 @@ Filter.TextFiles="Text Files"
 Filter.AllFiles="All Files"
 Color="Color"
 Opacity="Opacity"
+GradientColor="Gradient Color"
+GradientOpacity="Gradient Opacity"
+GradientDirection="Gradient Direction"
 BkColor="Background Color"
 BkOpacity="Background Opacity"
 Alignment="Alignment"
