obs-text: Add gradient feature
Closes jp9000/obs-studio#636

--- a/plugins/obs-text/data/locale/en-US.ini
+++ b/plugins/obs-text/data/locale/en-US.ini
@@ -7,6 +7,10 @@ Filter.TextFiles="Text Files"
 Filter.AllFiles="All Files"
 Color="Color"
 Opacity="Opacity"
+Gradient="Gradient"
+Gradient.Color="Gradient Color"
+Gradient.Opacity="Gradient Opacity"
+Gradient.Direction="Gradient Direction"
 BkColor="Background Color"
 BkOpacity="Background Opacity"
 Alignment="Alignment"
