obs-text: Text Source fixes and feature additions

--- a/plugins/obs-text/data/locale/en-US.ini
+++ b/plugins/obs-text/data/locale/en-US.ini
@@ -21,13 +21,23 @@ Vertical="Vertical"
 VerticalAlignment="Vertical Alignment"
 VerticalAlignment.Top="Top"
 VerticalAlignment.Bottom="Bottom"
+RenderMode="Rendering Mode"
+RenderMode.Add="Add To Background"
+RenderMode.Replace="Replace Background"
+AntiAlias="Anti-Aliasing"
 Outline="Outline"
 Outline.Size="Outline Size"
 Outline.Color="Outline Color"
 Outline.Opacity="Outline Opacity"
+Outline.Mode="Outline Mode"
+Outline.Mode.TextOverOutline="Text Over Outline"
+Outline.Mode.OutlineOverText="Outline Over Text"
+Outline.Mode.TextReplacesOutline="Text Replaces Outline"
+Outline.Mode.OutlineReplacesText="Outline Replaces Text"
 ChatlogMode="Chatlog Mode"
 ChatlogMode.Lines="Chatlog Line Limit"
 UseCustomExtents="Use Custom Text Extents"
 UseCustomExtents.Wrap="Wrap"
 Width="Width"
 Height="Height"
+ShowAdvancedOptions="Show Advanced Options"
