--- a/UI/frontend-plugins/frontend-tools/data/locale/en-US.ini
+++ b/UI/frontend-plugins/frontend-tools/data/locale/en-US.ini
@@ -16,3 +16,5 @@ OutputTimer.Stream="Stop streaming after:"
 OutputTimer.Record="Stop recording after:"
 OutputTimer.Stream.StoppingIn="Streaming stopping in:"
 OutputTimer.Record.StoppingIn="Recording stopping in:"
+OutputTimer.Stream.EnableEverytime="Enable streaming timer everytime"
+OutputTimer.Record.EnableEverytime="Enable recording timer everytime"
